# LiteInfer

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  build.sh  dockerfile  readme.md
cmake/: cuda.cmake
demo/: CMakeLists.txt
kuiper/base/: README.md  alloc.cpp  alloc.h  alloc_cpu.cpp  alloc_cu.cpp  base.cpp  base.h  buffer.cpp  buffer.h  cuda_config.h  tick.h  tiktoken.h  unicode-data.h  unicode.cpp  unicode.h  unicode_byte_fallback.cpp  unicode_props.cpp  unicode_props.h  unicode_utf8.h  unordered_dense.h
kuiper/include/base/: base.h  cuda_config.h
kuiper/include/tensor/: tensor.h
kuiper/model/: config.h  llama.cpp  llama.h  llama2.h  llama3.cpp  llama3.h  model.cpp  model.h  model_utils.cpp  model_utils.h  qwen2.cpp  qwen2.h  qwen3.cpp  qwen3.h  raw_model_data.cpp  raw_model_data.h  standard_decoder.cpp  standard_decoder.h
kuiper/model/core/: README.md  config.h  model.cpp  model.h  raw_model_data.cpp  raw_model_data.h
kuiper/model/decoder/: README.md  model_utils.cpp  model_utils.h  standard_decoder.cpp  standard_decoder.h
kuiper/model/llama/: README.md  llama.cpp  llama.h
kuiper/model/qwen/: README.md  qwen2.cpp  qwen2.h  qwen3.cpp  qwen3.h
kuiper/op/: add.cpp  add.h  embedding.cpp  embedding.h  encode.cpp  encode.h  layer.cpp  layer.h  matmul.cpp  matmul.h  mha.cpp  mha.h  rmsnorm.cpp  rmsnorm.h  rope.cpp  rope.h  swiglu.cpp  swiglu.h  tokenizer_layer.cpp  tokenizer_layer.h
kuiper/op/kernels/: kernels_interface.cpp  kernels_interface.h
kuiper/op/kernels/cpu/: add_kernel.cpp  add_kernel.h  emb_kernel.cpp  emb_kernel.h  matmul_kernel.cpp  mha_kernel.cpp  rmsnorm_kernel.cpp  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.cpp  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp
kuiper/op/kernels/cuda/: add_kernel.cu  add_kernel.cuh  argmax_kernel.cu  emb_kernel.cu  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  swiglu_kernel.cu  swiglu_kernel.cuh
kuiper/sampler/: argmax_sampler.cpp  argmax_sampler.h  sampler.h
kuiper/source/base/: alloc.cpp  buffer.cpp
kuiper/source/tensor/: tensor.cpp
kuiper/tensor/: tensor.cpp  tensor.h
kuiper/tokenizer/: tiktoken.h  unicode_byte_fallback.cpp
liteinfer/base/: alloc.cpp  alloc.h  alloc_cpu.cpp  alloc_cu.cpp  argmax_sampler.cpp  argmax_sampler.h  base.cpp  base.h  buffer.cpp  buffer.h  cuda_config.h  sampler.h  tensor.cpp  tensor.h  topk_sampler.cpp  topk_sampler.h  unicode-data.h  unicode_props.cpp  unicode_utf8.cpp
liteinfer/model/: config.h  generation.h  model.cpp  model.h  raw_model_data.cpp  raw_model_data.h
liteinfer/model/core/: config.h  model.cpp  model.h  raw_model_data.h
liteinfer/model/decoder/: model_utils.cpp  model_utils.h  standard_decoder.cpp  standard_decoder.h
liteinfer/model/llama/: infer_llama2.cpp  infer_llama3.cpp  llama.cpp  llama.h  llama2_chat.cpp  llama2_infer.cpp  llama2_infer_demo.cpp  llama3_chat.cpp  llama3_infer.cpp  llama3_infer_demo.cpp  llama3_infer_prompt_demo.cpp  llama_decoder.cpp  llama_decoder.h  llama_model_utils.cpp  llama_model_utils.h
liteinfer/op/: add.cpp  add.h  embedding.cpp  embedding.h  layer.cpp  layer.h  matmul.h  mha.cpp  mha.h  rmsnorm.cpp  rmsnorm.h  rope.cpp  rope.h  swiglu.h  tokenizer_layer.cpp  tokenizer_layer.h
liteinfer/op/kernels/: kernels_interface.cpp  kernels_interface.h
liteinfer/op/kernels/cpu/: add_kernel.h  emb_kernel.h  matmul_kernel.h  mha_kernel.cpp  mha_kernel.h  rmsnorm_kernel.h  rope_kernel.cpp  rope_kernel.h  scale_kernel.h  scale_sum_kernel.cpp  scale_sum_kernel.h  softmax_kernel.cpp  softmax_kernel.h  swiglu_kernel.cpp  swiglu_kernel.h  topk_sampling_kernel.cpp  topk_sampling_kernel.h
liteinfer/op/kernels/cuda/: add_kernel.cuh  argmax_kernel.cu  argmax_kernel.cuh  emb_kernel.cu  emb_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  mha_kernel.cu  mha_kernel.cuh  rmsnorm_kernel.cu  rmsnorm_kernel.cuh  rope_kernel.cu  rope_kernel.cuh  swiglu_kernel.cu  swiglu_kernel.cuh  (+2 more)
liteinfer/sampler/: argmax_sampler.cpp  argmax_sampler.h  sampler.h
liteinfer/tensor/: tensor.cpp  tensor.h
liteinfer/tokenizer/: tiktoken.h  tokenizer_layer.cpp  tokenizer_layer.h  unicode_byte_fallback.h
models/: CMakeLists.txt  generation.h
models/common/: generation.h
models/llama/: export_llama.py  infer_llama2.cpp  infer_llama3.cpp
models/llama/infer/: infer_llama2.cpp  infer_llama3.cpp
models/llama/tools/: export_llama3.py
models/llama3/: export_llama3.py  infer_llama3.cpp
models/qwen/: chat_qwen2.cpp  export_qwen2.py  export_qwen3_pth.py  infer_qwen2.cpp  infer_qwen3.cpp  qwen3_model.py
models/qwen2/: chat_qwen2.cpp  export_qwen2.py  infer_qwen2.cpp
models/qwen3/: export_qwen3_bin.py  export_qwen3_pth.py
test/: CMakeLists.txt  test_main.cpp  utils.cu
test/base/: test_argmax_sampler.cpp  test_bpe_tokenizer.cpp  test_buffer.cpp  test_buffer_core.cpp  test_tensor.cpp  test_topk_sampler.cpp  test_unicode.cpp
test/model/: test_generation.cpp  test_llama_cpu.cpp  test_llama_model_cpu.cpp  test_model_core.cpp  test_model_load.cpp  test_raw_model_data.cpp
test/op/cpu/: test_embedding_cpu.cpp  test_mha_cpu.cpp
test/op/cuda/: test_add_cuda.cpp  test_embedding_cuda.cpp  test_matmul_cuda.cpp  test_rmsnorm_cuda.cpp  test_rope_cuda.cpp  test_scale_cuda.cpp  test_softmax_cuda.cpp  test_swiglu_cuda.cpp
test/optimized/: test_allocator.cpp
test/sampler/: test_argmax_sampler.cpp
test/support/: cuda_test_utils.cu  cuda_test_utils.cuh  test_cuda_utils.cpp  test_main.cpp
test/tensor/: test_tensor.cpp
test/test_cu/: test_cu_wrap.cpp
test/test_model/: test_llama_cpu.cpp
test/test_op/: test_cu_add.cpp  test_cu_matmul.cpp  test_cu_rmsnorm.cpp  test_cu_rope.cpp  test_cu_scale.cpp  test_cu_softmax.cpp  test_cu_swiglu.cpp  test_load.cpp
test/test_tensor/: test_buffer.cpp  test_tensor.cpp
tools/: export_llama2.py  export_llama3.py
tools/llama/: export.py
tools/llama3/: export.py
tools/qwen2/: export.py
tools/qwen3/: export_bin.py
